# docdist

./: .cliff.toml  .gitignore  CHANGELOG.md  FEATURE-PLAN.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: CI-CD-GUIDE.md  uninstall-cleanup.md
e2e/: app.spec.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/diff/: engine.rs  mod.rs  summary.rs  types.rs
src-tauri/src/diff/parsers/: cad.rs  image.rs  mod.rs  pdf.rs  text.rs
src-tauri/src/services/: archive_service.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/archive/: ArchiveCard.tsx  ArchiveList.tsx  CreateArchiveButton.tsx  CreateArchiveDialog.tsx  EditArchiveDialog.tsx
src/components/common/: ConfirmDialog.tsx  ErrorBoundary.tsx  LogViewer.tsx  SearchBar.tsx  TagBadge.tsx  ThemeToggle.tsx  ToastContainer.tsx
src/components/diff/: DiffDetailView.tsx  DiffViewer.tsx  EnhancedDiffViewer.tsx  RegionsView.tsx  SummaryView.tsx
src/components/graph/: IterationGraph.tsx
src/components/mini/: MiniMode.tsx
src/components/settings/: SettingsPanel.tsx
src/components/timeline/: TimelineView.tsx
src/components/version/: StarDialog.tsx  VersionTreeView.tsx
src/components/watcher/: WatcherPanel.tsx
src/hooks/: useArchive.ts  useFocusTrap.ts  useTheme.ts
src/stores/: archiveStore.ts  toastStore.ts
src/styles/: animations.css  themes.css
src/test/: tauri-mocks.ts
src/types/: diff.ts  index.ts
src/utils/: format.ts  logger.ts  time.ts
(+9 files in other folders)
