[package]
name = "docdist"
version = "0.1.0"
edition = "2021"
description = "轻量级文件历史管理工具"

[dependencies]
sha2 = "0.10"
tauri = { version = "1.5", features = ["shell-open", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
notify = "6.0"
similar = "2.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs-next = "2.0"
blake3 = "1.5"
ts-rs = "7"
mime_guess = "2.0"
encoding_rs = "0.8"
zip = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
